<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    android:checkableBehavior="single">
    <item android:id="@+id/nv_settings"
        app:showAsAction="never"
        android:title="@string/settings"/>

    <item android:id="@+id/nav_profile"
        app:showAsAction="never"
        android:title="@string/edit"/>
    <item android:id="@+id/nv_about"
        app:showAsAction="never"
        android:title="@string/logout"/>
    <item android:id="@+id/backup"
        app:showAsAction="never"
        android:title="@string/langau"/>
    <item android:id="@+id/preferences"
        android:title="@string/prefer">
        <menu>
            <item android:id="@+id/help"
                app:showAsAction="never"
                android:title="@string/help"/>
            <item android:id="@+id/share"
                app:showAsAction="never"
                android:title="@string/share"/>
        </menu>
    </item>

</menu>